--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -10,7 +10,7 @@
         <tr>
           <td>{{ user.username }}</td>
           <td>
-            <a href="#">{{ user.first_name }} {{ user.last_name }}</a>
+            <a href="/users/{{ user.id }}">{{ user.first_name }} {{ user.last_name }}</a>
           </td>
         </tr>
       {% endfor %}
