created template for displaying the information about one user

--- a/users/templates/users/user.html
+++ b/users/templates/users/user.html
@@ -5,7 +5,14 @@
   </head>
   <body>
     <!-- (сюда писать решение) -->
-    
+    <div class="user-info">
+      <h3>id: {{ my_user.id }}</h3>
+      <ul>
+        <li>Name: {{ my_user.first_name }} {{ my_user.last_name }}</li>
+        <li>Email: {{ my_user.email }}</li>
+        <li>Username: {{ my_user.username }}</li>
+      </ul>
+    </div>
     <!-- (конец решения) -->
   </body>
 </html>
